<resources>


    <string name="app_name">eTrasa</string>
    <string name="login">Login</string>
    <string name="main">Main menu</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="manage_acc">Manage profile</string>
    <string name="connect_internet">You must connect device to the Internet</string>
    <string name="change_profile">My profile</string>
    <string name="create_track">Create track</string>
    <string name="create_acc">Register</string>
    <string name="app_settings">App Settings</string>
    <string name="about">About</string>
    <string name="progress_bar">Wait for result...</string>
    <string name="reset_password_success">We have sent you instructions to reset your password</string>
    <string name="reset_password_failed">Failed to send reset email</string>
    <string name="play_track">Track!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password!</string>
    <string name="enter_email">Enter email</string>
    <string name="password_length">Password must be min. 8 characters long</string>
    <string name="auth_failed">Authentication failed!</string>
    <string name="send_email_verf">Verification email sent to: </string>
    <string name="send_email_verf_failed">Failed to send verification email</string>
    <string name="hello">Welcome </string>
    <string name="change_name">Change your name</string>
    <string name="change_your_personal_data">Change your personal data</string>
    <string name="your_name">Your display name: </string>
    <string name="change_email">Change your email address</string>
    <string name="change_password">Change your password</string>
    <string name="password_updated">Password is updated</string>
    <string name="password_updated_failed">Failed to update password</string>
    <string name="password_mismatch">Password is the same as previous one </string>
    <string name="password_info">Enter your new password or leave as it</string>
    <string name="email_updated">Email is updated</string>
    <string name="email_updated_failed">Failed to update email</string>
    <string name="check_data">Incorrect login or password. Try again</string>
    <string name="cannot_create_acc">User is already in database</string>
    <string name="back">Go back</string>
    <string name="reset_password">Reset password</string>
    <string name="or">Or</string>
    <string name="old_email">Enter your old email</string>
    <string name="new_email">Enter your new email</string>
    <string name="new_email_success">Updated email</string>
    <string name="new_email_failed">Failed to update new email</string>
    <string name="old_email_mismatch">Emails are the same!</string>
    <string name="email_empty">Enter data to boxes!</string>
    <string name="save">Save</string>
    <string name="data_empty">Empty data. Cannot login</string>

    <string name="new_name">Enter your name</string>
    <string name="new_name_success">Your name was changed</string>
    <string name="new_name_empty">Enter name to box</string>

    <string name="old_password">Enter your previous password</string>
    <string name="new_password">Enter your new password</string>
    <string name="about_toast">Piotr Szczepanek s20850</string>

    <string name="remember_my_login">Remember my login</string>
    <string name="show_notifications">Show notifications</string>
    <string name="debug_mode">Debug mode</string>

    <string name="Settings">Settings</string>

    <string name="battery_low">Battery is low!</string>
    <string name="battery_ok">Battery is ok</string>
    <string name="notification_battery_low">Lowbattery!</string>
    <string name="notification_battery_ok">Battery ok!</string>

    <string name="power_con">Power is connected</string>
    <string name="notification_power_con">Power connected!</string>

    <string name="power_disccon">Power is disconnected</string>
    <string name="notification_power_discon">Power disconnected!</string>
    <string name="title_activity_track">Map</string>

    <string name="current_position">You are here</string>
    <string name="error_current_location">Error during locate device</string>

    <string name="cancel">Cancel</string>
    <string name="gps_enabled">Gps is enabled</string>
    <string name="gps_disabled">Gps is disabled</string>
    <string name="try_to_enable_gps">Enable gps for device</string>

    <string name="title_create_dialog">Create point</string>
    <string name="name_of_point">Enter name of point</string>
    <string name="radius">Radius [m]</string>
    <string name="description">Describe this point</string>
    <string name="select_image">Take a picture</string>
    <string name="set_data_for_point">You need to set data for point to put it on the map</string>
    <string name="now_click_on_map">Now click on map to add point</string>
    <string name="summarize_create_track">Add description to points and to track</string>
    <string name="prev">Previous point</string>
    <string name="next">Next point</string>
    <string name="markers_empty">There are no markers on map</string>
    <string name="save_description">Save description for point</string>
    <string name="add_track_to_database">End and create track</string>
    <string name="give_title_for_track">Give title for track</string>
    <string name="track_is_empty">Title for track or description is empty</string>
    <string name="deleted_marker">Marker was deleted</string>
    <string name="change_track">Change track</string>
    <string name="delete_track">Delete track</string>
    <string name="title_activity_play_track">Map</string>

    <string name="rate">Rate this track</string>
    <string name="rating">Rating </string>
    <string name="new_rate_success">Success</string>
    <string name="not_in_circle">You are not in the circle</string>
    <string name="geo_locate">Geo Locate</string>
    <string name="service_geo_locate">Service locates your device</string>
    <string name="move_next">Move to the next one</string>
    <string name="return_to_main_app">Return</string>

    <string name="upload_failed">Failed to upload an image</string>
    <string name="upload_success">Uploaded image</string>
    <string name="change_image">Change Image</string>
    <string name="track_deleted">Track was deleted</string>

</resources>
