<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/createTrack"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/change_profile"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/profile"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/change_profile"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/Settings"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/about" android:icon="@android:drawable/ic_dialog_info" app:showAsAction="never" android:title="@string/about">
    </item>
    <item
        android:id="@+id/signOut"  app:showAsAction="never" android:title="@string/sign_out">
    </item>
</menu>