<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">


    <TextView
    android:id="@+id/titleCreateDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="15dp"
    android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#3E80B4"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextPointName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name_of_point"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextPointRadius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/radius"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName"
            android:lines="20" />

        <Button
            android:id="@+id/buttonSelectImageCreateWindowDialog"
            style="@android:style/Widget.Holo.Button.Inset"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/select_image"
            android:textColor="@color/buttonText"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonSaveCreateWindowDialog"
            style="@android:style/Widget.Holo.Button.Inset"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/buttonSave"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>