<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relLayoutTrack">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        tools:context=".TrackActivity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/map"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextPointNameTrack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name_of_point"
            android:inputType="textPersonName"
            android:textColor="@color/buttonText" />

        <EditText
            android:id="@+id/editTextRadius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/radius"
            android:inputType="number"
            android:textColor="@color/buttonText" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description"
            android:inputType="text"
            android:maxLines="10"
            android:textColor="@color/buttonText" />

        <Button
            android:id="@+id/buttonSaveTrack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/buttonSave"
            android:text="@string/save" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

    </LinearLayout>

</RelativeLayout>