<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/give_title_for_track"
        android:textAlignment="center"
        android:textColor="@color/buttonText"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/information"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scrollbars="vertical"
        android:text="@string/description"
        android:textAlignment="gravity"
        android:textColor="@color/buttonText"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#3E80B4"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnReturn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/buttonLogIn"
            android:text="@string/return_to_main_app"
            android:textColor="@color/buttonText"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>