<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonTrack"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/buttonFirst"
            android:text="@string/play_track"
            android:textColor="#585858"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/buttonChangeProfile"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/buttonSecond"
            android:text="@string/change_profile"
            android:textColor="#585858"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/buttonCreateTrack"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/buttonThird"
            android:ellipsize="none"
            android:text="@string/create_track"
            android:textColor="#585858"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/buttonSignOut"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/buttonSave"
            android:text="@string/sign_out"
            android:textColor="#585858"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/TextViewMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="serif"
        android:text="@string/main"
        android:textColor="#585858"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>